// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legend As Heading 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    <h2 data-size="sm">
      Hvilke tjenester bruker du?
    </h2>
  </legend>
  <p id="<generated>">
    Påloggingssystemer hos Udir
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="feide"
      name="components-fieldset--legend-as-heading-feide"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Feide
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="UIDP"
      name="components-fieldset--legend-as-heading-UIDP"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      UIDP
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="UBAS"
      name="components-fieldset--legend-as-heading-UBAS"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      UBAS
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvilken fjordarm bor du ved?
  </legend>
  <p id="<generated>">
    Valget vil hjelpe oss å forbedre innholdet vi viser deg.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="barsnesfjorden"
      name="radio"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Barsnesfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="eidsfjorden"
      name="radio"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Eidsfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="ingen-av-dem"
      name="radio"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Ingen av dem
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Checkbox 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Godtar du vilkårene?
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Ja, jeg godtar
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Textfield 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    <h2 data-size="sm">
      Adresse
    </h2>
  </legend>
  <p id="<generated>">
    Skriv inn adressen din for å motta post fra oss.
  </p>
  <ds-field>
    <label for="<generated>">
      Gateadresse
    </label>
    <div>
      <input
        autocomplete="address-line1"
        type="text"
        name="components-fieldset--with-textfield-address-line1"
        id="<generated>"
      >
    </div>
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Postnummer
    </label>
    <div>
      <input
        inputmode="numeric"
        maxlength="4"
        size="4"
        autocomplete="postal-code"
        type="text"
        name="components-fieldset--with-textfield-postal-code"
        id="<generated>"
      >
    </div>
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Poststed
    </label>
    <div>
      <input
        size="25"
        autocomplete="address-level2"
        type="text"
        name="components-fieldset--with-textfield-address-level2"
        id="<generated>"
      >
    </div>
  </ds-field>
</fieldset>
`;
